edit style and deleteBtn
마우스 hover시 삭제버튼이 나타나고  todo 목록 뒤에 배경박스를 생성.

--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
       href="https://fonts.googleapis.com/css?family=MuseoModerno"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/12ed482fdd.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
       <div class="js-clock">
         <h1>00:00</h1>
       </div>
-      <form action="" class="js-form form">
-        <input type="text" placeholder="what is your name?" />
-      </form>
-      <h4 class="js-greetings greetings"></h4>
-      <form class="js-toDoForm">
-        <input type="text" placeholder="Write a to do ✏" />
-      </form>
-      <ul class="js-toDoList"></ul>
-      <span class="js-weather"></span>
+      <section class="contents">
+        <form action="" class="js-form form">
+          <input type="text" placeholder="what is your name?" />
+        </form>
+        <h4 class="js-greetings greetings"></h4>
+        <form class="js-toDoForm">
+          <input type="text" placeholder="Write a to do ✏" />
+        </form>
+        <ul class="js-toDoList"></ul>
+        <span class="js-weather"></span>
+      </section>
     </div>
+
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
